test: cobertura backend >90% y frontend ~70% + setup SonarCloud
Backend: tests unitarios + ramas (budget 95.8%, fasting 96.2%, auth 100% lineas), JaCoCo + lombok.config para ignorar codigo generado. Fix de bug (ThreadLocal cache en MovementServiceImpl) y limpieza de codigo muerto.

Frontend: reparados 54 tests rotos + nuevos tests (servicios, utils, contexts, componentes, pantallas). 54 suites / 301 tests, ~72% lineas.

CI: sonar-project.properties + workflow GitHub Actions (SonarCloud). backups/ ignorados.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>